# sdk-hsm-thingy53

./: CMakeLists.txt  Kconfig.hsm  README.md  west.yml
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/bh1749/: Kconfig  (+3 more)
include/: app_battery.h  app_leds.h  bme688_server.h  json.hpp  json_endpoint.h  udp_broadcast.h
samples/: Kconfig
samples/02_rgb_led/: CMakeLists.txt  prj.conf  sample.yaml
samples/03_battery/: CMakeLists.txt  app.overlay  prj.conf
samples/03_battery/src/: app_battery.c  main.c
samples/05_bh1749/: CMakeLists.txt
samples/05_bh1749/src/: main.c
samples/05_bme688/: CMakeLists.txt  prj.conf
samples/07_bme688_json/: CMakeLists.txt  prj.conf
samples/07_bme688_parallel_cpp/: app.overlay  prj.conf
samples/08_bme688_bsec2/: prj.conf
samples/10_bh1749_adaptive/: prj.conf
samples/11_openthread_shell/: CMakeLists.txt
samples/12_openthread_alive/: CMakeLists.txt  prj.conf
samples/12_ot_udp_client/: prj.conf
samples/13_openthread_joiner/: overlay-logging.conf
samples/14_ot_udp_echo_server/: overlay-logging.conf
samples/14_ot_udp_server/: CMakeLists.txt  prj.conf
samples/15_udp_json_endpoint/: CMakeLists.txt  prj.conf
samples/20_sensors_server/: CMakeLists.txt  Kconfig  app.overlay  overlay-logging.conf  overlay-lowpower.conf  prj.conf
samples/20_sensors_server/src/: main.cpp
samples/30_usb_dongle_router/: CMakeLists.txt  overlay-joiner-rounter.conf  overlay-joiner.conf  prj.conf  readme.md
samples/openthread/: prj.conf  sample.yaml
samples/openthread_alive/: CMakeLists.txt
samples/openthread_shell/: prj.conf
subsys/: CMakeLists.txt  Kconfig
subsys/app_battery/: Kconfig  app_battery.c
subsys/app_flash/: CMakeLists.txt  flash_settings_storage.cpp  flash_settings_storage.h
subsys/app_ot/: app_ot.c
subsys/bme688_server/: CMakeLists.txt  Kconfig  bme688_server.cpp  bme688_server.h
subsys/bme688_server/bsec2/: CMakeLists.txt  Kconfig  bsec2.cpp  bsec2.h
subsys/bme688_server/bsec2/Bosch-BSEC2-Library/: README.md
subsys/json_endpoint/: CMakeLists.txt  Kconfig  json_endpoint.cpp
subsys/udp_broadast/: CMakeLists.txt
subsys/udp_broadcast/: CMakeLists.txt  Kconfig  udp_broadcast.c  udp_broadcast.cpp
zephyr/: module.yml
(+38 files in other folders)
